# Chat_Second

./: README.md
Client/: CMakeLists.txt  authform.cpp  authform.h  authform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packetbuilder.h  serializer.cpp  serializer.h  types.h  validator.cpp
Client_2/: CMakeLists.txt  authform.cpp  authform.h  authform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  packetbuilder.cpp  serializer.cpp  serializer.h  types.h  validator.h
ProtoFiles/: IAuthRequest.pb.cc  IAuthRequest.pb.h  IAuthResponse.pb.cc  IAuthResponse.pb.h  IAuthResponse.proto  IGetChatHistoryRequest.pb.cc  IGetChatHistoryRequest.pb.h  IGetChatHistoryRequest.proto  IGetRequest.pb.cc  IGetRequest.pb.h  IGetRequest.proto  IGetResponse.pb.cc  IGetResponse.pb.h  IGetResponse.proto  IGetResponseEmpty.pb.cc  IGetResponseEmpty.pb.h  IGetResponseEmpty.proto  ISearchRequest.pb.cc  ISearchRequest.pb.h  ISearchRequest.proto  ISearchResponse.pb.cc  ISearchResponse.pb.h  ISearchResponse.proto
Server/: CMakeLists.txt  dbhandler.cpp  dbhandler.h  main.cpp  packetbuilder.cpp  packetbuilder.h  serializer.cpp  serializer.h  server.cpp  server.h  structs.h  types.h  validator.cpp  validator.h
